# brain

./: .env.example  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: napkin.md
.github/workflows/: ci.yml
brain/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
brain/docker/postgres/: Dockerfile
brain/docker/postgres/init/: 01-extensions.sql
brain/migrations/: env.py
brain/migrations/versions/: 0002_agent_inbox_curated_notes.py
brain/src/brain/: auth.py  config.py  main.py  outbox.py  repo_paths.py  worker.py
brain/src/brain/extraction/: entities.py  llm.py
brain/src/brain/graph/: age.py
brain/src/brain/indexing/: embeddings.py
brain/src/brain/ingestion/: git_sync.py  git_writer.py  pipeline.py
brain/src/brain/mcp/: handlers.py  server.py
brain/src/brain/notes/: __init__.py  links.py
brain/src/brain/queue/: postgres_queue.py
brain/src/brain/search/: retriever.py
brain/src/brain/storage/: db.py  models.py  repositories.py
brain/tests/: test_auth.py  test_config.py  test_embeddings.py  test_entities.py  test_git_sync.py  test_git_writer.py  test_llm.py  test_note_links.py  test_signature.py
brain/tests/integration/: conftest.py  test_graph.py  test_main.py  test_mcp_handlers.py  test_migrations.py  test_models.py  test_pipeline.py  test_queue.py  test_repositories.py  test_retriever.py  test_worker.py
docker/backup/: backup.sh
docker/brain-public/: nginx.conf
docs/: README.md  architecture.md  data-model.md  development.md  mcp-api.md  operations.md  security.md
docs/decisions/: 0001-documentation-architecture.md  README.md
docs/plans/: 2026-06-16-brain-audit-fixes.md  2026-06-17-agent-inbox-curation-design.md  2026-06-17-agent-inbox-curation-implementation.md
migrations/versions/: 0001_inicial.py  0002_job_run_after.py  0003_agent_inbox_curated_notes.py  0003_job_run_after.py  0004_drop_memories.py
src/brain/: auth.py  config.py  main.py  outbox.py  ratelimit.py  repo_paths.py  worker.py
tests/: test_age_unit.py  test_auth.py  test_chunker.py  test_config.py  test_deploy_config.py  test_embeddings.py  test_entities.py  test_facts.py  test_git_sync.py  test_git_writer.py  test_imports.py  test_llm.py  test_mcp_rate_limit.py  test_note_links.py  test_query_entities.py  test_ratelimit.py  test_rerank.py  test_semantic_entities.py  test_signature.py  test_smoke.py
tests/integration/: conftest.py  test_graph.py  test_main.py  (+8 more)
(+36 files in other folders)
