[project]
name = "brain"
version = "0.1.0"
description = "Provedor de memória pessoal exposto como servidor MCP"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "mcp>=1.2",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pgvector>=0.3",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "openai>=1.55",
    "structlog>=24.4",
    "tenacity>=9.0",
    "tiktoken>=0.8",
    "httpx>=0.27",
    "cryptography>=48.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "testcontainers[postgres]>=4.8",
    "anyio>=4.6",
    "psycopg2-binary>=2.9.12",
    "ruff>=0.15.18",
    "mypy>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brain"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM", "BLE"]

[tool.ruff.lint.per-file-ignores]
# Migrations são geradas/declarativas; não impomos estilo de linha nelas.
"migrations/**" = ["E501"]

[tool.mypy]
python_version = "3.12"
files = ["src"]
ignore_missing_imports = true
# Adoção incremental: começamos pragmáticos e apertamos com o tempo.
check_untyped_defs = true
warn_unused_ignores = false
warn_redundant_casts = true
no_implicit_optional = true
